# TomatoHarvesting_NextBestView

./: README.md  README_setup.txt  nohup.out
code_for_trying/ICP_test/: ICP_test.ipynb  ICP_test.py  ICP_test_clean.py
code_for_trying/ICP_test/.ipynb_checkpoints/: Gentle_Introduction_to_Point_Cloud_Registration_using_Open3D_Tut4-checkpoint.ipynb
code_for_trying/SDF_test/: SDF_byScan_final_ray.ipynb  SDF_test
code_for_trying/SDF_test/.ipynb_checkpoints/: SDF_byScan_final_ray-checkpoint.ipynb
install/: local_setup.sh  setup.sh
install/my_bot/share/my_bot/: local_setup.sh  package.sh
install/my_bot/share/my_bot/config/: camera_bot.rviz
install/my_bot/share/my_bot/worlds/: tomato_plant_set3.world
install/my_robot_cam/share/my_robot_cam/: package.ps1  package.sh
install/my_robot_nbv/share/my_robot_nbv/: package.bash  package.sh
install/my_robot_nbv_cmake/lib/my_robot_nbv_cmake/: nbvc_ray_generation
install/my_robot_nbv_cmake/share/my_robot_nbv_cmake/: local_setup.dsv  package.dsv  package.sh  package.zsh
install/octomap_server2/lib/octomap_server2/: octomap_server
install/octomap_server2/share/octomap_server2/: package.sh
install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: local_setup.sh  package.sh
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: package.sh
install/realsense2_description/share/realsense2_description/: package.sh
log/: latest_build
nbv_code/: create_container.sh
nbv_code/nbv_docker_ros_humble_base/: Dockerfile  create_container.sh  create_container_seamswrongone.sh
nbv_code/nbv_for_local_computer/ros2_ws2_local/: frames_2025-01-07_20.54.53.gv  frames_2025-01-07_20.56.39.gv  frames_2025-01-07_21.08.46.gv  frames_2025-01-07_21.10.49.gv  frames_2025-01-07_21.24.51.gv  frames_2025-01-07_21.26.04.gv  frames_2025-01-07_21.53.21.gv  frames_2025-01-07_22.14.42.gv  frames_2025-01-07_22.17.24.gv
nbv_code/nbv_for_local_computer/ros2_ws2_local/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
nbv_code/nbv_for_local_computer/ros2_ws2_local/log/: latest_build
nbv_code/nbv_for_local_computer/ros2_ws2_local/src/: frames_2024-11-13_23.05.19.gv
nbv_code/nbv_for_local_computer/ros2_ws2_local/src/dataset/data_pcd/: TomatoPlant_only1tomato_onlyRed.ply  TomatoPlant_size_modified_only1tomato.ply  copy_of_filtered_msg.pcd  (+1 more)
nbv_code/nbv_for_local_computer/ros2_ws2_local/src/install/: local_setup.sh  setup.sh
nbv_code/nbv_for_local_computer/ros2_ws2_local/src/log/: latest_build
nbv_code/nbv_for_local_computer/ros2_ws2_local/src/message_interfaces/: CMakeLists.txt
nbv_code/nbv_for_local_computer/ros2_ws2_local/src/my_robot_arm/: package.xml
nbv_code/nbv_for_local_computer/ros2_ws2_local/src/my_robot_cam/: setup.cfg  setup.py
nbv_code/nbv_for_local_computer/ros2_ws2_local/src/my_robot_nbv/: package.xml  setup.py
nbv_code/nbv_for_local_computer/ros2_ws2_local/src/my_robot_nbv_cmake/: CMakeLists.txt
nbv_code/nbv_for_local_computer/ros2_ws2_local/src/octomap_server2/: CMakeLists.txt
nbv_code/ros2_ws2/: frames_2025-05-05_10.36.41.gv  frames_2025-05-05_11.28.21.gv  frames_2025-05-05_14.49.50.gv  frames_2025-05-05_15.25.40.gv  frames_2025-05-05_15.30.39.gv  frames_2025-05-05_15.40.07.gv  frames_2025-05-05_16.38.20.gv  frames_2025-05-05_16.53.48.gv  frames_2025-05-05_17.06.39.gv  frames_2025-05-06_10.48.31.gv  frames_2025-05-06_10.59.24.gv  frames_2025-05-06_11.04.57.gv  note.txt
nbv_code/ros2_ws2/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
nbv_code/ros2_ws2/install/my_robot_nbv_cmake/share/my_robot_nbv_cmake/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml
nbv_code/ros2_ws2/install/my_robot_nbv_cmake/share/my_robot_nbv_cmake/cmake/: my_robot_nbv_cmakeConfig-version.cmake  my_robot_nbv_cmakeConfig.cmake
nbv_code/ros2_ws2/install/my_robot_nbv_cmake/share/my_robot_nbv_cmake/environment/: ament_prefix_path.dsv  path.dsv
nbv_code/ros2_ws2/install/realsense2_camera/include/: base_realsense_node.h  constants.h  dynamic_params.h  gl_window.h  image_publisher.h  named_filter.h  profile_manager.h  realsense_node_factory.h  ros_param_backend.h  ros_sensor.h  ros_utils.h  sensor_params.h
nbv_code/ros2_ws2/log/: latest_build  latest_list
nbv_code/ros2_ws2/src/: file.ot
nbv_code/ros2_ws2/src/Experiment/test20250805/: test.D4_3jpg
nbv_code/ros2_ws2/src/dataset/data_octomap/: octomap_after_inter.ot  octomap_before_inter.ot  octomap_from_orig.ot
nbv_code/ros2_ws2/src/message_interfaces/: CMakeLists.txt
nbv_code/ros2_ws2/src/my_bot/config/: camera_bot.rviz  camera_bot3.rviz
nbv_code/ros2_ws2/src/my_bot/description/: robot.urdf.xacro
nbv_code/ros2_ws2/src/my_bot/worlds/: tomato_plant_set3_v3_pro2.world  tomato_plant_set3_v5.world  tomato_plant_set3_v7.world  tomato_plant_set4.world  tomato_plant_set5.world  tomato_plantset.world
nbv_code/ros2_ws2/src/my_robot_arm/: package.xml  setup.py
nbv_code/ros2_ws2/src/my_robot_arm/my_robot_arm/: arm_move_controller.py
nbv_code/ros2_ws2/src/my_robot_cam/: setup.py
nbv_code/ros2_ws2/src/my_robot_cam/my_robot_cam/: cam_calculate_redpix.py  cam_cloudrate_transformer.py  cam_image_getsave.py  cam_tf_broadcaster.py
nbv_code/ros2_ws2/src/my_robot_cam_cmake/: package.xml
nbv_code/ros2_ws2/src/my_robot_nbv/: package.xml  setup.cfg  setup.py
nbv_code/ros2_ws2/src/my_robot_nbv/launch/: launch_nbv.py
nbv_code/ros2_ws2/src/my_robot_nbv/my_robot_nbv/: module_ICP.py  module_detect_tom.py  nbv_system_controller.py  nbv_temp_isMovingPublisher.py  nbv_tom_detect.py  nbv_tompcd_filter.py  nbv_tompcd_filter_backup20250108—2.py
nbv_code/ros2_ws2/src/my_robot_nbv_cmake/: CMakeLists.txt  package.xml
nbv_code/ros2_ws2/src/my_robot_nbv_cmake/include/my_robot_nbv_cmake/: SdfModel.h  open3d_conversions.h
nbv_code/ros2_ws2/src/my_robot_nbv_cmake/src/: BestViewModel.cpp  SdfModel.cpp  SdfModelV1.cpp  nbvc_ray_generation.cpp
nbv_code/ros2_ws2/src/octomap_server2/launch/: octomap_server_launch.py
(+401 files in other folders)
