<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_nbv_cmake</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jajajaja4646@gmail.com">jajayu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- for point cloud ros2 topic -->
  <depend>sensor_msgs</depend>
  <!-- <build_depend>octomap</build_depend>
  <run_depend>octomap</run_depend> -->
  <depend>open3d</depend>
  <!-- for o3d_pcd to ros2 pcd -->
  <!-- <depend>open3d_conversions</depend>  -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
